--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,6 @@
-<my-app>loading</my-app>
+<div class="container">
+  <h1>
+    <i class="fa fa-user"> </i>
+    <my-app>Cargando...</my-app>
+  </h1>
+</div>
